@@ -1,5 +1,5 @@
 /*
- * Copyright 2012-2013 the original author or authors.
+ * Copyright 2012-2015 the original author or authors.
  *
  * Licensed under the Apache License, Version 2.0 (the "License");
  * you may not use this file except in compliance with the License.
@@ -26,6 +26,7 @@ import java.util.concurrent.Future;
 import java.util.concurrent.TimeUnit;
 
 import org.junit.Test;
+
 import org.springframework.boot.actuate.metrics.util.SimpleInMemoryRepository.Callback;
 
 import static org.junit.Assert.assertEquals;
@@ -74,7 +75,8 @@ public class InMemoryRepositoryTests {
 		this.repository.set("foo.bar", "one");
 		this.repository.set("foo.min", "two");
 		this.repository.set("foo.max", "three");
-		assertEquals(3, ((Collection<?>) this.repository.findAllWithPrefix("foo")).size());
+		assertEquals(3,
+				((Collection<?>) this.repository.findAllWithPrefix("foo")).size());
 	}
 
 	@Test
@@ -125,7 +127,7 @@ public class InMemoryRepositoryTests {
 		for (Future<Boolean> future : all) {
 			assertTrue(future.get(1, TimeUnit.SECONDS));
 		}
-		assertEquals(new Integer(0), repository.findOne("foo"));
+		assertEquals(Integer.valueOf(0), repository.findOne("foo"));
 	}
 
 }
