@@ -1,5 +1,5 @@
 /*
- * Copyright 2013-2014 the original author or authors.
+ * Copyright 2013-2015 the original author or authors.
  *
  * Licensed under the Apache License, Version 2.0 (the "License");
  * you may not use this file except in compliance with the License.
@@ -24,6 +24,7 @@ import javax.sql.DataSource;
 import org.junit.After;
 import org.junit.Before;
 import org.junit.Test;
+
 import org.springframework.boot.autoconfigure.PropertyPlaceholderAutoConfiguration;
 import org.springframework.boot.context.properties.ConfigurationProperties;
 import org.springframework.boot.context.properties.EnableConfigurationProperties;
@@ -99,7 +100,7 @@ public class DataSourceInitializerTests {
 		assertTrue(dataSource instanceof org.apache.tomcat.jdbc.pool.DataSource);
 		assertNotNull(dataSource);
 		JdbcOperations template = new JdbcTemplate(dataSource);
-		assertEquals(new Integer(1),
+		assertEquals(Integer.valueOf(1),
 				template.queryForObject("SELECT COUNT(*) from BAR", Integer.class));
 	}
 
@@ -107,40 +108,33 @@ public class DataSourceInitializerTests {
 	public void testDataSourceInitializedWithExplicitScript() throws Exception {
 		this.context.register(DataSourceAutoConfiguration.class,
 				PropertyPlaceholderAutoConfiguration.class);
-		EnvironmentTestUtils
-				.addEnvironment(
-						this.context,
-						"spring.datasource.initialize:true",
-						"spring.datasource.schema:"
-								+ ClassUtils.addResourcePathToPackagePath(getClass(),
-										"schema.sql"),
-						"spring.datasource.data:"
-								+ ClassUtils.addResourcePathToPackagePath(getClass(),
-										"data.sql"));
+		EnvironmentTestUtils.addEnvironment(this.context,
+				"spring.datasource.initialize:true",
+				"spring.datasource.schema:" + ClassUtils
+						.addResourcePathToPackagePath(getClass(), "schema.sql"),
+				"spring.datasource.data:" + ClassUtils
+						.addResourcePathToPackagePath(getClass(), "data.sql"));
 		this.context.refresh();
 		DataSource dataSource = this.context.getBean(DataSource.class);
 		assertTrue(dataSource instanceof org.apache.tomcat.jdbc.pool.DataSource);
 		assertNotNull(dataSource);
 		JdbcOperations template = new JdbcTemplate(dataSource);
-		assertEquals(new Integer(1),
+		assertEquals(Integer.valueOf(1),
 				template.queryForObject("SELECT COUNT(*) from FOO", Integer.class));
 	}
 
 	@Test
 	public void testDataSourceInitializedWithMultipleScripts() throws Exception {
-		EnvironmentTestUtils
-				.addEnvironment(
-						this.context,
-						"spring.datasource.initialize:true",
-						"spring.datasource.schema:"
-								+ ClassUtils.addResourcePathToPackagePath(getClass(),
-										"schema.sql")
-								+ ","
-								+ ClassUtils.addResourcePathToPackagePath(getClass(),
-										"another.sql"),
-						"spring.datasource.data:"
-								+ ClassUtils.addResourcePathToPackagePath(getClass(),
-										"data.sql"));
+		EnvironmentTestUtils.addEnvironment(this.context,
+				"spring.datasource.initialize:true",
+				"spring.datasource.schema:"
+						+ ClassUtils.addResourcePathToPackagePath(getClass(),
+								"schema.sql")
+						+ ","
+						+ ClassUtils.addResourcePathToPackagePath(getClass(),
+								"another.sql"),
+				"spring.datasource.data:" + ClassUtils
+						.addResourcePathToPackagePath(getClass(), "data.sql"));
 		this.context.register(DataSourceAutoConfiguration.class,
 				PropertyPlaceholderAutoConfiguration.class);
 		this.context.refresh();
@@ -148,32 +142,30 @@ public class DataSourceInitializerTests {
 		assertTrue(dataSource instanceof org.apache.tomcat.jdbc.pool.DataSource);
 		assertNotNull(dataSource);
 		JdbcOperations template = new JdbcTemplate(dataSource);
-		assertEquals(new Integer(1),
+		assertEquals(Integer.valueOf(1),
 				template.queryForObject("SELECT COUNT(*) from FOO", Integer.class));
-		assertEquals(new Integer(0),
+		assertEquals(Integer.valueOf(0),
 				template.queryForObject("SELECT COUNT(*) from SPAM", Integer.class));
 	}
 
 	@Test
-	public void testDataSourceInitializedWithExplicitSqlScriptEncoding() throws Exception {
+	public void testDataSourceInitializedWithExplicitSqlScriptEncoding()
+			throws Exception {
 		this.context.register(DataSourceAutoConfiguration.class,
 				PropertyPlaceholderAutoConfiguration.class);
-		EnvironmentTestUtils.addEnvironment(
-				this.context,
+		EnvironmentTestUtils.addEnvironment(this.context,
 				"spring.datasource.initialize:true",
 				"spring.datasource.sqlScriptEncoding:UTF-8",
-				"spring.datasource.schema:"
-						+ ClassUtils.addResourcePathToPackagePath(getClass(),
-								"encoding-schema.sql"),
-				"spring.datasource.data:"
-						+ ClassUtils.addResourcePathToPackagePath(getClass(),
-								"encoding-data.sql"));
+				"spring.datasource.schema:" + ClassUtils
+						.addResourcePathToPackagePath(getClass(), "encoding-schema.sql"),
+				"spring.datasource.data:" + ClassUtils
+						.addResourcePathToPackagePath(getClass(), "encoding-data.sql"));
 		this.context.refresh();
 		DataSource dataSource = this.context.getBean(DataSource.class);
 		assertTrue(dataSource instanceof org.apache.tomcat.jdbc.pool.DataSource);
 		assertNotNull(dataSource);
 		JdbcOperations template = new JdbcTemplate(dataSource);
-		assertEquals(new Integer(2),
+		assertEquals(Integer.valueOf(2),
 				template.queryForObject("SELECT COUNT(*) from BAR", Integer.class));
 		assertEquals("bar",
 				template.queryForObject("SELECT name from BAR WHERE id=1", String.class));
